(lang dune 3.14)

(name bindlib_versions)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bindlib_versions)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune bindlib)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
